# serializer version: 1
# name: test_entity[binary_sensor.baby_bedroom_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.baby_bedroom_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:26:68:92-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.baby_bedroom_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Baby Bedroom Connectivity',
      'latitude': 13.377726,
      'longitude': 52.516263,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.baby_bedroom_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.bedroom_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bedroom_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:26:69:0c-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.bedroom_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Bedroom Connectivity',
      'latitude': 13.377726,
      'longitude': 52.516263,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity[binary_sensor.kitchen_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kitchen_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:25:cf:a8-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.kitchen_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Kitchen Connectivity',
      'latitude': 13.377726,
      'longitude': 52.516263,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.livingroom_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.livingroom_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:26:65:14-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.livingroom_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Livingroom Connectivity',
      'latitude': 13.377726,
      'longitude': 52.516263,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.livingroom_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.parents_bedroom_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.parents_bedroom_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:3e:c5:46-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.parents_bedroom_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Parents Bedroom Connectivity',
      'latitude': 13.377726,
      'longitude': 52.516263,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.parents_bedroom_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.villa_bathroom_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.villa_bathroom_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:80:7e:18-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.villa_bathroom_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Villa Bathroom Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.villa_bathroom_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.villa_bedroom_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.villa_bedroom_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:80:44:92-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.villa_bedroom_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Villa Bedroom Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.villa_bedroom_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.villa_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.villa_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:80:bb:26-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.villa_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Villa Connectivity',
      'latitude': 46.123456,
      'longitude': 6.1234567,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.villa_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.villa_garden_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.villa_garden_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:03:1b:e4-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.villa_garden_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Villa Garden Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.villa_garden_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity[binary_sensor.villa_outdoor_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.villa_outdoor_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:80:1c:42-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.villa_outdoor_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Villa Outdoor Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.villa_outdoor_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity[binary_sensor.villa_rain_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.villa_rain_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12:34:56:80:c1:ea-reachable',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity[binary_sensor.villa_rain_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Netatmo',
      'device_class': 'connectivity',
      'friendly_name': 'Villa Rain Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.villa_rain_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
